# anml-client-rust

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
.kiro/specs/anml-client/: design.md  requirements.md  tasks.md
examples/: action_execution.rs  basic_fetch.rs  custom_auth.rs  middleware.rs  multi_step_flow.rs
src/: audit.rs  auth.rs  cache.rs  client.rs  config.rs  error.rs  integrity.rs  lib.rs  middleware.rs  pagination.rs  prelude.rs  retry.rs  rights.rs
src/action/: builder.rs  idempotency.rs  mod.rs  params.rs  params_property_test.rs  validation.rs
src/disclosure/: consent.rs  consent_property_test.rs  matching.rs  matching_property_test.rs  mod.rs  rate_limit.rs
src/discovery/: dns_sd.rs  html_link.rs  link_header.rs  mod.rs  well_known.rs
src/flow/: mod.rs
src/knowledge/: mod.rs  response.rs
src/security/: mod.rs  tokenizer.rs
src/testing/: assertions.rs  fixtures.rs  mock_server.rs  mod.rs
tests/: builder_validation.rs  integration.rs
